--- a/index.css
+++ b/index.css
@@ -63,6 +63,11 @@ body {
   background-color: white;
   color: #000;
 }
+@media screen and (max-width: 600px) {
+  .page--item_left {
+    width: 100%;
+  }
+}
 .page--item_right {
   width: 50%;
   border-right: 1px solid black;
@@ -70,6 +75,11 @@ body {
   background-color: white;
   float: right;
   color: #000;
+}
+@media screen and (max-width: 600px) {
+  .page--item_right {
+    width: 100%;
+  }
 }
 .page--item_inner {
   display: flex;
@@ -181,8 +191,20 @@ body {
   display: flex;
   align-items: center;
 }
+@media screen and (max-width: 600px) {
+  .row {
+    flex-direction: column;
+    float: left;
+    width: 100%;
+  }
+}
 .info p {
   font-size: 2rem;
+}
+@media screen and (max-width: 600px) {
+  .info p {
+    font-size: 1.7rem;
+  }
 }
 .info span {
   padding-right: 7%;
