--- a/index.css
+++ b/index.css
@@ -181,10 +181,10 @@ body {
   font-size: 20vw;
   padding: 4%;
 }
-.info .col-4:nth-child(1) {
+.info .col:nth-child(1) {
   border-right: 1px solid black;
 }
-.info .col-3:nth-child(2) {
+.info .col:nth-child(2) {
   border-right: 1px solid black;
 }
 .info .row {
@@ -195,7 +195,30 @@ body {
   .row {
     flex-direction: column;
     float: left;
-    width: 100%;
+    max-width: 100%;
+    justify-content: flex-start;
+  }
+}
+@media screen and (max-width: 600px) {
+  .info .col:nth-child(1) {
+    border-right: 1px solid white;
+  }
+}
+@media screen and (max-width: 600px) {
+  .col-3 {
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 100%;
+    margin-left: 10%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .col-5 {
+    -ms-flex: 0 0 41.666667%;
+    flex: 0 0 41.666667%;
+    max-width: 100%;
+    margin-bottom: 10%;
+    margin-left: 10%;
   }
 }
 .info p {
@@ -235,6 +258,7 @@ form {
 @media screen and (max-width: 600px) {
   .btn {
     width: 60vw;
+    margin-left: 5%;
   }
 }
 form label {
@@ -249,5 +273,15 @@ footer span {
   font-size: 0.8rem;
   font-weight: 700;
   margin: 5%;
-  padding: 2%;
+  padding-left: 2%;
+}
+@media screen and (max-width: 600px) {
+  .footer span {
+    padding-left: 0%;
+  }
+}
+@media screen and (max-width: 600px) {
+  form label {
+    padding-left: 5%;
+  }
 }
