--- a/index.css
+++ b/index.css
@@ -236,15 +236,16 @@ body {
 @media screen and (max-width: 600px) {
   .info .col:nth-child(2) {
     border-right: 1px solid white;
+    border-top: 1px solid black;
   }
 }
 .info p {
   font-size: 2rem;
-  font-weight: 700;
 }
 @media screen and (max-width: 600px) {
   .info p {
-    font-size: 1.7rem;
+    font-size: 3rem;
+    margin-top: 10%;
   }
 }
 .info span {
